--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -9,3 +9,8 @@
 <h2>{{ 'Hola'.repeat(4) }}</h2>
 <p>La suma de 3 + 3 es {{ 3 + 3 }}</p>
 <p>Hola soy {{ name }} y tengo {{ age }} años</p>
+<img [src]="img" alt="">
+<input type="text" [value]="name">
+<input type="number" [value]="person.age">
+<button [disabled]="disabled">Click me</button>
+<p>person: {{ person.name }}</p>
