--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -1,16 +1,23 @@
-<h1>Este es mi primer proyecto en angular</h1>
-<h2>{{ welcome }}</h2>
-<ul>
-  <li *ngFor="let task of tasks">
-    {{ task }}
-  </li>
-</ul>
-<hr />
-<h2>{{ 'Hola'.repeat(4) }}</h2>
-<p>La suma de 3 + 3 es {{ 3 + 3 }}</p>
-<p>Hola soy {{ name }} y tengo {{ age }} años</p>
-<img [src]="img" alt="">
-<input type="text" [value]="name">
-<input type="number" [value]="person.age">
-<button [disabled]="disabled">Click me</button>
-<p>person: {{ person.name }}</p>
+<div class="container">
+  <h1>Este es mi primer proyecto en angular</h1>
+  <h2>{{ welcome }}</h2>
+  <ul>
+    <li *ngFor="let task of tasks">
+      {{ task }}
+    </li>
+  </ul>
+  <hr />
+  <h2>{{ 'Hola'.repeat(4) }}</h2>
+  <p>La suma de 3 + 3 es {{ 3 + 3 }}</p>
+  <p>Hola soy {{ name }} y tengo {{ age }} años</p>
+  <img [src]="img" alt="">
+  <input type="text" [value]="name">
+  <input type="number" [value]="person.age">
+  <button [disabled]="disabled">click me</button>
+  <p>person: {{ person.name }}</p>
+  <hr />
+  <button (click)="clickHandler()" >click me</button>
+  <button (dblclick)="clickHandler()" >double click me</button>
+  <p>(change)</p>
+  <input type="number" [value]="person.age" (change)="changeHandler($event)">
+</div>
