Event binding: keydown.

--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -20,4 +20,6 @@
   <button (dblclick)="clickHandler()" >double click me</button>
   <p>(change)</p>
   <input type="number" [value]="person.age" (change)="changeHandler($event)">
+  <p>(keydown)</p>
+  <input type="text" [value]="person.name" (keydown)="keydownHandler($event)">
 </div>
