--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -2,7 +2,7 @@
   <h1>Este es mi primer proyecto en angular</h1>
   <h2>{{ welcome }}</h2>
   <ul>
-    <li *ngFor="let task of tasks">
+    <li *ngFor="let task of tasks()">
       {{ task }}
     </li>
   </ul>
@@ -23,6 +23,12 @@
   <p>(keydown)</p>
   <input type="text" [value]="person.name" (keydown)="keydownHandler($event)">
   <hr />
+  <ul>
+    <p>total: {{ tasks().length }}</p>
+    <li *ngFor="let task of tasks(); index as i">
+      {{ i }} {{ task }}
+    </li>
+  </ul>
   <h1>Signals</h1>
   <input type="text" [value]="name()" (change)="changeHandler($event)">
   <p>name is: {{ name() }}</p>
