--- a/todoapp/src/app/pages/home/home.component.html
+++ b/todoapp/src/app/pages/home/home.component.html
@@ -50,8 +50,11 @@
       <!-- This footer should be hidden by default and shown when there are todos -->
       <footer class="footer">
         <!-- This should be `0 items left` by default -->
-        <span class="todo-count"><strong>{{ tasks().length }}</strong> items</span>
-        <!-- Remove this if you don't implement routing -->
+        <span class="todo-count">
+          <strong>{{ tasks().length }}</strong> 
+          <span *ngIf="tasks().length === 1; else elseblock" > item</span>
+          <ng-template #elseblock> items</ng-template>
+        </span>
         <ul class="filters">
           <li>
             <a routerLink="/" class="selected">All</a>
