--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -51,4 +51,7 @@
     <p *ngSwitchCase="'Manuel'">Yo soy Manuel</p>
     <p *ngSwitchDefault>Yo no soy nadie</p>
   </div>
+  <hr />
+  <input type="color" [formControl]="colorControl">
+  <p>color: {{ colorControl.value }}</p>
 </div>
