--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -62,4 +62,8 @@
   <hr />
   <input type="number" [formControl]="widthControl">
   <span class="box" [style.width.px]="widthCtrl.value"></span>
+  <hr />
+  <input type="text" [formControl]="nameCtrl"> <br />
+  <span class="message-error" [class.active]="nameCtrl.invalid && nameCtrl.touched">Nombre invalido</span>
+  <input type="text">
 </div>
