--- a/todoapp/src/app/pages/home/home.component.html
+++ b/todoapp/src/app/pages/home/home.component.html
@@ -17,15 +17,21 @@
       <!-- This section should be hidden by default and shown when there are todos -->
       <section class="main">
         <ul class="todo-list">  
-          <li *ngFor="let task of tasks(); index as i">
+          <li 
+            (dblclick)="updateTaskEditingMode(i)" 
+            *ngFor="let task of tasks(); index as i"
+            [class.editing]="task.editing"  
+            [class.completed]="task.completed"
+          >
             <div class="view">
               <input class="toggle" type="checkbox" [checked]="task.completed" (change)="updateTask(i)"/>
               <label>{{ task.title }}</label>
               <button class="destroy" (click)="deleteTask(i)"></button>
             </div>
-            <input class="edit" value="Learn JavaScript" />
+            <input class="edit" (keydown.enter)="updateTaskText(i, $event)" [value]="task.title" />
           </li>
-          <!-- <li>
+          <!-- 
+          <li class="copleted">
             <div class="view">
               <input class="toggle" type="checkbox" />
               <label>Buy a unicorn</label>
