Persistencia: Usando effect para localStorage.

--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -60,7 +60,7 @@
     </g>
   </svg>
   <hr />
-  <input type="number" [formControl]="widthControl">
+  <input type="number" [formControl]="widthCtrl">
   <span class="box" [style.width.px]="widthCtrl.value"></span>
   <hr />
   <input type="text" [formControl]="nameCtrl"> <br />
