--- a/todoapp/src/app/pages/home/home.component.html
+++ b/todoapp/src/app/pages/home/home.component.html
@@ -50,22 +50,22 @@
         </ul>
       </section>
       <!-- This footer should be hidden by default and shown when there are todos -->
-      <footer class="footer">
+      <footer class="footer" *ngIf="tasksByFilter().length > 0">
         <!-- This should be `0 items left` by default -->
         <span class="todo-count">
-          <strong>{{ tasks().length }}</strong> 
+          <strong>{{ tasksByFilter().length }}</strong> 
           <span *ngIf="tasks().length === 1; else elseblock" > item</span>
           <ng-template #elseblock> items</ng-template>
         </span>
         <ul class="filters">
           <li>
-            <a (click)="changeFilter('all')" class="selected">All</a>
+            <a (click)="changeFilter('all')" [class.selected]="filter() === 'all'">All</a>
           </li>
           <li>
-            <a (click)="changeFilter('pending')">Pending</a>
+            <a (click)="changeFilter('pending')" [class.selected]="filter() === 'pending'">Pending</a>
           </li>
           <li>
-            <a (click)="changeFilter('completed')">Completed</a>
+            <a (click)="changeFilter('completed')" [class.selected]="filter() === 'completed'">Completed</a>
           </li>
         </ul>
         <!-- Hidden if no completed items are left ↓ -->
